--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         
-        <script type="application/javascript" src="js/roles.js"></script>
+        <script type="application/javascript" src="js/rules.js"></script>
         <script type="application/javascript" src="js/ai.js"></script>
         <script type="application/javascript" src="js/card.js"></script>
         <script type="application/javascript" src="js/deck.js"></script>
