--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     </head>
     <body>
         
+        <div id="game"></div>
+        <div id="statusContainer">
+            <div id="score">
+                <div>
+                    <h1>Placar Jogador x PC</h1>
+                </div>
+            </div>
+            <div id="status">
+                <div></div>
+            </div>
+            <div id="controls">
+                <div>
+                    <h2>Área pra pedir truco</h2>
+                </div>
+            </div>
+        </div>
+        
+        <script type="application/javascript" src="js/statusView.js"></script>
+        <script type="application/javascript" src="js/gameView.js"></script>
         <script type="application/javascript" src="js/rules.js"></script>
         <script type="application/javascript" src="js/ai.js"></script>
         <script type="application/javascript" src="js/card.js"></script>
