Results and new functions to status bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <div id="statusContainer">
             <div id="score">
                 <div>
-                    <h1>Placar Jogador x PC</h1>
+                    <div class="resultDiv">
+                        <span class="result player">00</span>
+                        <p>Jogador</p>
+                    </div>
+                    <div class="resultDiv">
+                        <span class="result computer">00</span>
+                        <p>Computador</p>
+                    </div>
                 </div>
             </div>
             <div id="status">
