Tela para iniciar jogo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     </head>
     <body>
         
+        <div class="overlay"></div>
+        <div id="gameWarnings">
+            <p>Vamos jogar?!</p>
+            <br /><br />
+            <a href="#" id="startGame" class="button">Começar</a>
+            <a href="#" id="gameRules" class="button">Regras</a>
+            <a href="#" id="aboutAuthors" class="button">Sobre</a>
+        </div>
+        
         <div id="game"></div>
         <div id="statusContainer">
             <div id="score">
@@ -27,7 +36,7 @@
             </div>
             <div id="controls">
                 <div>
-                    <h2>Área pra pedir truco</h2>
+                    <a href="#" class="button block">TRUCO!</a>
                 </div>
             </div>
         </div>
