--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
         
+        <script type="application/javascript" src="js/sentences.js"></script>
         <script type="application/javascript" src="js/statusView.js"></script>
         <script type="application/javascript" src="js/gameView.js"></script>
         <script type="application/javascript" src="js/rules.js"></script>
