--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <a href="#" id="aboutAuthors" class="button">Sobre</a>
         </div>
         
-        <div id="game"></div>
+        <div id="game">
+            <div id="computerHand"></div>
+            <div id="playerHand"></div>
+        </div>
         <div id="statusContainer">
             <div id="score">
                 <div>
